[gd_scene load_steps=51 format=1]

[ext_resource path="res://Scripts/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Zvukovi/Samples/WingFlap/flap01.smp" type="Sample" id=2]
[ext_resource path="res://Zvukovi/Samples/WingFlap/flap02.smp" type="Sample" id=3]
[ext_resource path="res://Zvukovi/Samples/WingFlap/flap03.smp" type="Sample" id=4]
[ext_resource path="res://Zvukovi/Samples/WingFlap/flap04.smp" type="Sample" id=5]
[ext_resource path="res://Zvukovi/Samples/FootSteps/footstep_01.smp" type="Sample" id=6]
[ext_resource path="res://Zvukovi/Samples/FootSteps/footstep_02.smp" type="Sample" id=7]
[ext_resource path="res://Zvukovi/Samples/FootSteps/footstep_03.smp" type="Sample" id=8]
[ext_resource path="res://Zvukovi/Samples/FootSteps/footstep_04.smp" type="Sample" id=9]
[ext_resource path="res://Zvukovi/Samples/FootSteps/footstep_05.smp" type="Sample" id=10]
[ext_resource path="res://Zvukovi/Samples/FootSteps/footstep_06.smp" type="Sample" id=11]
[ext_resource path="res://Zvukovi/Samples/FootSteps/footstep_07.smp" type="Sample" id=12]
[ext_resource path="res://Scripts/Audio/SamplePlayer.gd" type="Script" id=13]
[ext_resource path="res://Zvukovi/Samples/thump.smp" type="Sample" id=14]
[ext_resource path="res://Textures/Sprites/glow_004.png" type="Texture" id=15]
[ext_resource path="res://Textures/Sprites/krilo_v002.png" type="Texture" id=16]
[ext_resource path="res://Textures/Sprites/EFFECTS/run.png" type="Texture" id=17]
[ext_resource path="res://Textures/Sprites/EFFECTS/wing_dust.png" type="Texture" id=18]
[ext_resource path="res://Textures/Sprites/sarge_14.png" type="Texture" id=19]
[ext_resource path="res://Scripts/Player/StompSpriteRotation.gd" type="Script" id=20]
[ext_resource path="res://Textures/Sprites/EFFECTS/stomp.png" type="Texture" id=21]
[ext_resource path="res://Scripts/Player/RayNode.gd" type="Script" id=22]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( 22.3129, -0.44064, 14.8586, 40.8896, 12.6082, 35.2944 )

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( -17.7435, 35.0386, -21.1294, 40.8385, -28.9286, 18.4829, -31.0265, 7.11934 )

[sub_resource type="ConvexPolygonShape2D" id=3]

custom_solver_bias = 0.0
points = Vector2Array( -9.87274, -37.1113, 1.83241, -42.9835, 15.3546, -42.3396, 19.1661, -17.7482, -31.0265, 7.11934 )

[sub_resource type="ConvexPolygonShape2D" id=4]

custom_solver_bias = 0.0
points = Vector2Array( -31.0265, 7.11934, 19.1661, -17.7482, 22.3129, -0.44064, 12.6082, 35.2944, -17.7435, 35.0386 )

[sub_resource type="SampleLibrary" id=5]

samples/flap01 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 2 )
}
samples/flap02 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 3 )
}
samples/flap03 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}
samples/flap04 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}
samples/footstep_01 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 6 )
}
samples/footstep_02 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 7 )
}
samples/footstep_03 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 8 )
}
samples/footstep_04 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 9 )
}
samples/footstep_05 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 10 )
}
samples/footstep_06 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 11 )
}
samples/footstep_07 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 12 )
}

[sub_resource type="SampleLibrary" id=6]

samples/thump = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 14 )
}

[sub_resource type="Animation" id=7]

length = 3.0
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1, 1.41, 2.23 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[sub_resource type="Animation" id=8]

length = 1.0
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.05 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 0, 13 ]
}

[sub_resource type="Animation" id=9]

length = 0.4
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11, 12, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Krila:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 5 ), Vector2( 0, 4.1 ), Vector2( 0, 4 ), Vector2( 0, 4.2 ), Vector2( 0, 5 ), Vector2( 0, 4.1 ), Vector2( 0, 4 ), Vector2( 0, 4.2 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("SamplePlayer")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0.01, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_footstep"
}, {
"args": [  ],
"method": "play_footstep"
} ]
}

[sub_resource type="Animation" id=10]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionPolygon2D:polygon")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ Vector2Array( -29.3144, 15.4329, -29.2912, 1.98021, -10.0504, -36.889, 1.83241, -42.9835, 15.3546, -42.3396, 19.1661, -17.7482, 22.3129, -0.44064, 13.7321, 40.3236, -20.0157, 40.466 ) ]
}

[sub_resource type="Animation" id=11]

length = 0.4
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("StompAnchor/Stomp:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.01, 0.17, 0.23 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StompAnchor/Stomp:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.01, 0.04, 0.1, 0.18 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=12]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("RunDust:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=13]

length = 0.2
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("RunDust:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.02, 0.06, 0.12, 0.18 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RunDust:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.02, 0.18, 0.2 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=14]

length = 0.3
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("WingDustL:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.02, 0.29 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WingDustL:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.02, 0.07, 0.12 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WingDustR:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.02, 0.29 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WingDustR:frame")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.02, 0.07, 0.12, 0.18 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=15]

length = 0.3
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("WingDustL:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.02, 0.16 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.75, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WingDustL:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.02, 0.05, 0.1 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WingDustR:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.02, 0.16 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.75, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WingDustR:frame")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.02, 0.05, 0.1, 0.15 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=16]

length = 0.3
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("WingDustL:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.02, 0.08 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.5, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WingDustL:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.02, 0.04, 0.1 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WingDustR:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.02, 0.08 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.5, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WingDustR:frame")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.02, 0.04, 0.1, 0.15 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=17]

length = 0.3
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("WingDustL:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.02, 0.04 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.25, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WingDustL:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.08, 0.1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WingDustR:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.02, 0.04 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.25, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WingDustR:frame")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.08, 0.1, 0.15 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=18]

length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:energy")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.35, 0.85 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.5, 1.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.95 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LightSprite:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.08, 0.23 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LightSprite:transform/scale")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0.5, 1.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.95, 0.95 ) ]
}

[sub_resource type="Animation" id=19]

length = 0.1
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("KriloL:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.01, 0.02 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 8.0, -63.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KriloR:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.01, 0.02 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -8.0, 60.0 ]
}

[sub_resource type="Animation" id=20]

length = 0.1
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("KriloL:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.01, 0.02 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.8, -45.5066 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KriloR:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.01, 0.02 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -1.0, 45.0 ]
}

[sub_resource type="Animation" id=21]

length = 0.1
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("KriloL:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.01, 0.03 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -0.8, -30.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KriloR:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.01, 0.03 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.8, 30.0 ]
}

[sub_resource type="Animation" id=22]

length = 0.1
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("KriloL:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.04 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ -16.0, -36.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KriloR:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.04 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 16.0, 36.0 ]
}

[sub_resource type="Animation" id=23]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("KriloL:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KriloR:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=24]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("KriloL:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ -36.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KriloR:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 36.0 ]
}

[sub_resource type="Animation" id=25]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("KriloL:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ -18.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KriloR:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 18.0 ]
}

[sub_resource type="CapsuleShape2D" id=26]

custom_solver_bias = 0.0
radius = 3.27774
height = 29.306

[sub_resource type="RectangleShape2D" id=27]

custom_solver_bias = 0.0
extents = Vector2( 18.7864, 5.43923 )

[sub_resource type="ConvexPolygonShape2D" id=28]

custom_solver_bias = 0.0
points = Vector2Array( -33.6525, 14.4056, -31.7207, -1.69225, -13.4765, -39.254, 1.76283, -46.9809, 17.8607, -44.8346, 24.2999, -21.6536, 25.373, 0.668777, 16.5729, 43.3818, -21.4181, 43.3818 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]

process/pause_mode = 1
transform/pos = Vector2( -2, 0 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0.142395, 2.92709 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0.142395, 2.92709 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 3 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0.142395, 2.92709 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 4 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0.142395, 2.92709 )
shapes/3/trigger = false
collision/layers = 2
collision/mask = 2
collision/margin = 0.08
script/script = ExtResource( 1 )
StartingState = ""
next_rotation = 0.0

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 5 )
default/volume_db = 3.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0
script/script = ExtResource( 13 )

[node name="Thump" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 6 )
default/volume_db = 3.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="sarge_anim_player" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/breathing = SubResource( 7 )
anims/jump = SubResource( 8 )
anims/run = SubResource( 9 )
anims/run_null = SubResource( 10 )
playback/active = true
playback/speed = 2.0
blend_times = [  ]
autoplay = ""

[node name="stomp_anim_player" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/stomp = SubResource( 11 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="run_anim_player" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/none = SubResource( 12 )
anims/run = SubResource( 13 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="wing_dust_anim_player" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/flap_1 = SubResource( 14 )
anims/flap_2 = SubResource( 15 )
anims/flap_3 = SubResource( 16 )
anims/flap_4 = SubResource( 17 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="light_idle_loop" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/idle_loop = SubResource( 18 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "idle_loop"

[node name="Light2D" type="Light2D" parent="."]

visibility/visible = false
enabled = true
editor_only = false
texture = ExtResource( 15 )
offset = Vector2( 0, 25 )
scale = 0.965
color = Color( 1, 1, 1, 1 )
energy = 0.45
mode = 0
range/height = 0.0
range/z_min = -1024
range/z_max = 1024
range/layer_min = 0
range/layer_max = 0
range/item_mask = 1
shadow/enabled = false
shadow/color = Color( 0, 0, 0, 0 )
shadow/buffer_size = 2048
shadow/esm_multiplier = 80.0
shadow/item_mask = 15

[node name="LightSprite" type="Sprite" parent="."]

visibility/opacity = 0.11
visibility/blend_mode = 1
transform/scale = Vector2( 0.965, 0.965 )
texture = ExtResource( 15 )
offset = Vector2( 0, 23 )

[node name="Krila" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 0, 5 )

[node name="krila_anim_player" type="AnimationPlayer" parent="Krila"]

playback/process_mode = 0
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/flap_1 = SubResource( 19 )
anims/flap_2 = SubResource( 20 )
anims/flap_3 = SubResource( 21 )
anims/flap_4 = SubResource( 22 )
anims/krilo_null = SubResource( 23 )
anims/krilo_null_falling = SubResource( 24 )
anims/krilo_null_tired = SubResource( 25 )
next/flap_1 = "krilo_null"
next/flap_2 = "krilo_null"
next/flap_3 = "krilo_null_tired"
next/flap_4 = "krilo_null_falling"
playback/active = true
playback/speed = 1.0
blend_times = [ "flap_1", "krilo_null", 0.01 ]
autoplay = ""

[node name="KriloL" type="Position2D" parent="Krila"]

transform/pos = Vector2( 15, -16 )
transform/rot = -45.5066

[node name="KriloLSprite" type="Sprite" parent="Krila/KriloL"]

transform/pos = Vector2( 9.19435, -5.52228 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 16 )

[node name="KriloR" type="Position2D" parent="Krila"]

transform/pos = Vector2( -8, -16 )
transform/rot = 45.0

[node name="KriloRSprite" type="Sprite" parent="Krila/KriloR"]

transform/pos = Vector2( -9.40407, -5.40598 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 16 )
flip_h = true

[node name="RunDust" type="Sprite" parent="."]

visibility/opacity = 7.7486e-07
transform/pos = Vector2( 27.6576, 35.53 )
texture = ExtResource( 17 )
vframes = 4
frame = 3

[node name="WingDustL" type="Sprite" parent="."]

visibility/opacity = 0.0
transform/pos = Vector2( 31.5834, 15.3763 )
texture = ExtResource( 18 )
vframes = 4

[node name="WingDustR" type="Sprite" parent="."]

visibility/opacity = 0.0
transform/pos = Vector2( -36.3635, 12.0629 )
texture = ExtResource( 18 )
flip_h = true
vframes = 4

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( -1.22379, 4.7853 )
texture = ExtResource( 19 )
vframes = 3
hframes = 5

[node name="StompAnchor" type="Position2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 0.130722, 26.4958 )
script/script = ExtResource( 20 )

[node name="Stomp" type="Sprite" parent="StompAnchor"]

visibility/opacity = 0.0
transform/pos = Vector2( 122.012, -13.913 )
texture = ExtResource( 21 )
offset = Vector2( -130.06, -15.0938 )
vframes = 4
frame = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

transform/pos = Vector2( 0.142395, 2.92709 )
build_mode = 0
polygon = Vector2Array( -28.9286, 18.4829, -31.0265, 7.11934, -9.87274, -37.1113, 1.83241, -42.9835, 15.3546, -42.3396, 19.1661, -17.7482, 22.3129, -0.44064, 14.8586, 40.8896, 12.6082, 35.2944, -17.7435, 35.0386, -21.1294, 40.8385 )
shape_range = Vector2( 0, 3 )
trigger = false

[node name="AreaDown" type="Area2D" parent="."]

transform/pos = Vector2( -17.6572, 2.86224 )
input/pickable = false
shapes/0/shape = SubResource( 26 )
shapes/0/transform = Matrix32( -4.37114e-08, -1, 1, -4.37114e-08, 14.703, 40.1398 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="AreaDownCol" type="CollisionShape2D" parent="AreaDown"]

transform/pos = Vector2( 14.703, 40.1398 )
transform/rot = 90.0
shape = SubResource( 26 )
trigger = false
_update_shape_index = 0

[node name="AreaForPlatVersions" type="Area2D" parent="."]

transform/pos = Vector2( -17.6572, 2.86224 )
input/pickable = false
shapes/0/shape = SubResource( 27 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 14.8684, 47.7026 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaForPlatVersions"]

transform/pos = Vector2( 14.8684, 47.7026 )
shape = SubResource( 27 )
trigger = false
_update_shape_index = 0

[node name="AreaAll" type="Area2D" parent="."]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( 0, 3.21188 )
input/pickable = false
shapes/0/shape = SubResource( 28 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionPolygon2D1" type="CollisionPolygon2D" parent="AreaAll"]

build_mode = 0
polygon = Vector2Array( -33.6525, 14.4056, -31.7207, -1.69225, -13.4765, -39.254, 1.76283, -46.9809, 17.8607, -44.8346, 24.2999, -21.6536, 25.373, 0.668777, 16.5729, 43.3818, -21.4181, 43.3818 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="Label" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -13.0
margin/top = -63.0
margin/right = 27.0
margin/bottom = -49.0
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="RayNode" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( -2, 0 )
script/script = ExtResource( 22 )

[node name="RayGround" type="RayCast2D" parent="RayNode"]

enabled = true
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[node name="RayHelp1" type="RayCast2D" parent="RayNode"]

transform/pos = Vector2( 7.89752, 0 )
enabled = true
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[node name="RayHelp2" type="RayCast2D" parent="RayNode"]

transform/pos = Vector2( -8.55205, 0 )
enabled = true
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[connection signal="body_enter" from="AreaDown" to="." method="_on_AreaDown_body_enter"]

[connection signal="body_exit" from="AreaDown" to="." method="_on_AreaDown_body_exit"]

[connection signal="body_enter" from="AreaForPlatVersions" to="." method="_on_AreaForPlatVersions_body_enter"]

[connection signal="body_exit" from="AreaForPlatVersions" to="." method="_on_AreaForPlatVersions_body_exit"]

[connection signal="body_enter" from="AreaAll" to="." method="_on_AreaAll_body_enter"]

[connection signal="body_exit" from="AreaAll" to="." method="_on_AreaAll_body_exit"]


